# rwlogout

./: .gitignore  Cargo.nix  Cargo.toml  LICENSE  README.md  flake.nix  layout.kdl  shell.nix
.github/workflows/: rust.yml
src/: .~lock.main.rs#  config.rs  lib.rs  main.rs
