[package]
name = "rwlogout"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
relm4 = { version = "0.9", features = ["macros"] }
gtk = { version = "0.9.4", package = "gtk4" }
gtk4-layer-shell = "0.4.0"
kdl = "4.6.0"
serde = { version = "1.0", features = ["derive"] }
